force-app/main/default/objects/clofor_com_cfs__PILoan__c/fields/clofor_com_cfs__UnpaidBalancePIUSDForBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalancePIUSDForBank__c</fullName>
    <label>UNPAID BALANCE P/I(USD)-FOR LOAN</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>