force-app/main/default/objects/clofor_com_cfs__PILoan__c/fields/clofor_com_cfs__UnpaidBalancePIUSDFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalancePIUSDFormula__c</fullName>
    <formula>clofor_com_cfs__PurchasingInvoiceID__r.clofor_com_cfs__UnpaidBalance__c</formula>
    <label>UNPAID BALANCE P/I(USD)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>